--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,10 @@ project(Checkers)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_subdirectory(source)
-add_subdirectory(play)
+set(SOURCES
+        source/ABSearch.hpp source/ABSearch.cpp
+        source/Game.hpp source/Game.cpp
+        source/Table.hpp source/Table.cpp
+        source/Vector.hpp source/Vector.cpp)
+
+add_executable(${PROJECT_NAME} play/main.cpp ${SOURCES})
